# r2k

./: default.nix  pyproject.toml  shell.nix
r2k/: config.py  constants.py  email_sender.py  feeds.py
r2k/cli/: cli_utils.py
r2k/cli/config/: config_show.py
r2k/cli/kindle/: kindle_send.py
r2k/ebook/: epub_builder.py
tests/: test_sanity.py
